[tool.poetry]
name = "postingimage"
version = "0.1.0"
description = ""
authors = ["spawlov <107248409+spawlov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.15"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
tqdm = "^4.67.1"
mypy = "^1.14.0"
types-requests = "^2.32.0.20241016"
python-telegram-bot = "13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.10
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
